--- a/sourse/pug/blocks/sNew/_sNew.pug
+++ b/sourse/pug/blocks/sNew/_sNew.pug
@@ -59,5 +59,6 @@ mixin sNewProdItem(addClasses='', imgMod='')
 					.col
 						+e.price 85 990 руб.
 					.col-auto
-						+e.add-btn(href="#")
-							+icon('plus')
+						+e.btn-wrap
+							+e.add-btn(href="#")
+								+icon('plus')
