--- a/sourse/sass/_mixin.scss
+++ b/sourse/sass/_mixin.scss
@@ -220,3 +220,25 @@
   position: relative;
   overflow: hidden;
 }
+
+
+
+@mixin sw-row() {
+  margin-top: calc(var(--bs-gutter-y, 0px)*-1);
+  margin-left: calc(var(--bs-gutter-x)/-2);
+  margin-right: calc(var(--bs-gutter-x)/-2);
+  flex-wrap: wrap!important;
+  transform: none!important;
+  width: calc(100% + var(--bs-gutter-x, 0px)) !important;
+  max-width: calc(100% + var(--bs-gutter-x, 0px)) !important;
+
+  & > .swiper-slide-duplicate{
+    display: none!important;
+  }
+}
+
+@mixin sw-col(){
+  height: auto;
+  padding: 0 calc(var(--bs-gutter-x)/2) !important;
+  margin: calc(var(--bs-gutter-y, 0px)) 0 0 0!important;
+}
