--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -40,6 +40,7 @@ $gray-115: #E2E2E2;
 $gray-120: #F3F3F3;
 $gray-125: #F6F6F6;
 $gray-130: #F7F7F7;
+$gray-135: #EDEDED;
 $gray-200: #e9ecef !default;
 $gray-280: #E8E8E8;
 $gray-290: #EEEEEE;
@@ -48,6 +49,7 @@ $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-510: #C4C4C4;
 $gray-511: #B5B5B5;
+$gray-512: #CFCFCF;
 $gray-520: #BABABA;
 $gray-520: #ECECEC;
 $gray-525: #EAEBEE;
@@ -65,9 +67,10 @@ $gray-690: #9D9D9D;
 $gray-700: #495057 !default;
 $gray-710: #4D4D4D;
 $gray-720: #575757;
+$gray-730: #464646;
 $gray-800: #343a40 !default;
 $gray-830: #444444;
-$gray-900: #262626 !default;
+$gray-900: #262626;
 $gray-910: #343232;
 $gray-910: #2C2C2C;
 $gray-920: #2a2a2a;
