--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -74,6 +74,7 @@ $gray-900: #262626;
 $gray-910: #343232;
 $gray-910: #2C2C2C;
 $gray-920: #2a2a2a;
+$gray-930: #242424;
 $gray-990: #1B1A1A;
 $black: #000 !default;
 // scss-docs-end gray-color-variables
