--- a/sourse/pug/blocks/sProdCard/_sProdCard.pug
+++ b/sourse/pug/blocks/sProdCard/_sProdCard.pug
@@ -186,8 +186,8 @@ mixin middleContentTableItem(title, addTittleClass='')
 
 mixin middleContentTableRow(key, val)
 	+e.ct-tr.row
-		+e.ct-key.col-md-6.col-lg-5=key
-		+e.ct-val.col-md=val
+		+e.ct-key.col.col-md-6.col-lg-5=key
+		+e.ct-val.col-auto.col-md=val
 
 
 mixin sProdCardPill(imgNum, key, val)
