--- a/sourse/pug/blocks/sNew/_sNew.pug
+++ b/sourse/pug/blocks/sNew/_sNew.pug
@@ -12,9 +12,17 @@ mixin sNew(data)
 			+e.slider-wrap
 				.swiper-container.sNew-slider-js
 					.swiper-wrapper
+						.swiper-slide
+							+sNewProdItem(undefined, undefined, 4)
+						.swiper-slide
+							+sNewProdItem(undefined, undefined, 3)
+						.swiper-slide
+							+sNewProdItem(undefined, undefined, 2)
+						.swiper-slide
+							+sNewProdItem(undefined, undefined, 1)
 						-for (var i = 1; i < 10; i++)
 							.swiper-slide
-								+sNewProdItem({})
+								+sNewProdItem(undefined, undefined, 4)
 				.d-none.d-md-block
 					+arrow2()
 			+e.baners-row.row
@@ -41,32 +49,38 @@ mixin sNew(data)
 			//
 	// end sNew
 
-mixin sNewProdItem(addClasses='', imgMod='')
+mixin sNewProdItem(addClasses='', imgMod='', imgAmount=1)
 	+b.prod-item--alt(class=addClasses)
-		+e.a-img
-			img(loading="lazy" src=`img/@2x/sNew-img${imgMod}.jpg` alt="")
+		+e.a-slider
+			.swiper-container.sNewProdItem-slider-js
+				.swiper-wrapper
+					-for(var i = 1; i <= imgAmount; i++)
+						+sNewProdItemSlide(i)
+					.swiper-slide.text-start
+						+e.c-title Характеристики
+						+e.chars
+							+sFamiliarSlideChar('Артикул:', '770080')
+							+sFamiliarSlideChar('Производитель:', 'Toshiba')
+							+sFamiliarSlideChar('Цвет:', 'золотистый')
+				.swiper-pagination
 		+e.content
 			+e.title(href="#")
 				span Холодильник Toshiba
 				br
 				span GR-RT565RS(N)
-			+e.chars
-				+sFamiliarSlideChar('Артикул:', '770080')
-				+sFamiliarSlideChar('Производитель:', 'Toshiba')
-				+sFamiliarSlideChar('Цвет:', 'золотистый')
-			.mt-auto
-				+e.foot-row.row.align-items-center
-						.col
-							+e.price 69 990 руб.
-						.col-auto
-							+e.actions
-								.row.gx-3.justify-content-end
-									+e.btn-wrap
-										+e.add-btn(href="#")
-											+icon('plus')
-											+icon('check')
-											+e.add-btn-toggle-text
-												span в корзину
-												span в корзине
-									+longProdAction(2)
-									+longProdAction(3)
+			+e.foot-row.row.align-items-center.mt-auto
+				.price-col.col
+					+e.price 69 990 руб.
+				.actions-col.actions-col--js.col-auto
+					.row.gx-2.justify-content-end.align-items-center.ps-1
+						+e.hint-col.hint-col-js.col-auto(data-hint="Купить" data-hint-active="В корзине")
+							+e.n-cart-btn.cart-btn-js(href="#")
+								img(loading="lazy" src="img/svg/n-cart.svg" alt="")
+								img(loading="lazy" src="img/svg/n-cart-done.svg" alt="")
+						+nAction(1, 'Добавить в избранное', 'В избранном')
+						+nAction(2, 'Добавить в сравнение', 'В сравнение')
+
+mixin sNewProdItemSlide(imgNum)
+	.swiper-slide
+		+e.a-img
+			img(loading="lazy" src=`img/@2x/cat-card-${imgNum}.png` alt="")
