--- a/sourse/pug/blocks/sNew/_sNew.scss
+++ b/sourse/pug/blocks/sNew/_sNew.scss
@@ -38,29 +38,30 @@
 		padding-bottom: rem(50);
 
 		position: relative;
-		.swiper-container{
+		& > .swiper-container{
 			@include media-breakpoint-down(md){
 				overflow: visible!important;
 			}
-		}
-		.swiper-wrapper{
+			//
+			& > .swiper-wrapper{
+				& > .swiper-slide{
+					height: auto;
+					width: #{rem(272)};
 
+					@include media-breakpoint-up(md){
+						width: calc(100%/3);
+					}
+					@include media-breakpoint-up(lg){
+						width: calc(100%/4);
+					}
+					@include media-breakpoint-up(xxl){
+						//width: calc(20% + 1px);
+						width: calc(100%/5);
+					}
+				}
+			}
 		}
-		.swiper-slide{
-			height: auto;
-			width: #{rem(272)};
 
-			@include media-breakpoint-up(md){
-				width: calc(100%/3);
-			}
-			@include media-breakpoint-up(lg){
-				width: calc(100%/4);
-			}
-			@include media-breakpoint-up(xxl){
-				//width: calc(20% + 1px);
-				width: calc(100%/5);
-			}
-		}
 	}
 
 	//
