--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -102,6 +102,7 @@ $red: #dc3545 !default;
 $orange: #FF8651;
 $yellow: #ffc107 !default;
 $green: #198754 !default;
+$green2: #8AC44B;
 $teal: #20c997 !default;
 $cyan: #0dcaf0 !default;
 // scss-docs-end color-variables
