--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -604,6 +604,7 @@
     --bs-gutter-y: #{rem(10)};
     --bs-gutter-x: #{rem(0)};
     flex-wrap: nowrap;
+    margin-top: auto;
     width: 100%;
     justify-content: space-between;
 
