--- a/sourse/pug/blocks/sBaner/_sBaner.pug
+++ b/sourse/pug/blocks/sBaner/_sBaner.pug
@@ -3,6 +3,8 @@ mixin sBaner(data)
 	+b.SECTION.sBaner.section#sBaner&attributes(attributes)
 		+pic('sBaner-bg.jpg')(class="sBaner__bg")
 		+e.container.container
+			+e.img.d-none.d-xl-block
+				img(loading="lazy" src="img/@2x/landing-img.png" alt="")
 			+e.black
 			+b.section-title
 				h1 Островная вытяжка в глянцевой золотой отделке
