--- a/sourse/pug/blocks/sBaner/_sBaner.scss
+++ b/sourse/pug/blocks/sBaner/_sBaner.scss
@@ -63,6 +63,14 @@
 		padding-top: var(--sPT);
 		padding-bottom: var(--sPB);
 	}
+	&__img{
+		position: absolute;
+		z-index: 2;
+		right: 200px;
+		top: 0;
+		max-width: 300px;
+		max-height: 300px;
+	}
 	&__black{
 		//--l-shift-x: #{rem(30)};
 
@@ -76,6 +84,8 @@
 		background: rgba($dark, 0.63);
 	}
 	.section-title{
+		position: relative;
+		z-index: 3;
 		color: $gray-110;
 		max-width: rem(838);
 
