--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -551,7 +551,7 @@
 
     &:before{
       white-space: nowrap;
-      content: attr(data-hint);
+      //content: attr(data-hint);
       display: inline-block;
 
       bottom: calc(100% + 11px);
@@ -566,7 +566,7 @@
       box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
     }
     &:after{
-      content: '';
+      //content: '';
       bottom: calc(100% + 1px);
       width: 0;
       height: 0;
@@ -582,7 +582,7 @@
     }
     &.active{
       &:before{
-        content: attr(data-hint-active);
+        //content: attr(data-hint-active);
       }
     }
 
