--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -549,7 +549,7 @@
         left: 50%;
         transform: translateX(-50%);
       }
-
+    }
     &:before{
       white-space: nowrap;
       //content: attr(data-hint);
