--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -1108,3 +1108,15 @@ iframe {
 		background-color: $gray-830;
 	}
 }
+
+.tippy-box{
+	background: $gray-125!important;
+	color: #000;
+	box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
+}
+.tippy-arrow{
+	&::before{
+		border-color: $gray-125 transparent transparent transparent!important;
+	}
+
+}
