--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -1120,3 +1120,10 @@ iframe {
 	}
 
 }
+
+		@include media-breakpoint-up(md){
+			
+			[data-tippy-root] {
+				display: none !important;
+			}
+		}
