--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -564,7 +564,7 @@
 
 	}
 	.prod-item__chars{
-		margin-right: -8px;
+		// margin-right: -8px;
 
 		margin-bottom: rem(15);
 		@include media-breakpoint-up(xxl){
