--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -148,6 +148,8 @@ mixin sCatalogCard(data)
 							+e.chars
 								+sFamiliarSlideChar('Артикул:', '770080')
 								+sFamiliarSlideChar('Производитель:', 'Toshiba')
+								+sFamiliarSlideChar('Размораживание холодильной камеры:', 'автоматическое')
+								+sFamiliarSlideChar('Морозильная камера:', 'снизу')
 								+sFamiliarSlideChar('Цвет:', 'золотистый')
 					.swiper-pagination
 			.small.text-secondary.text-center Шкафы для подогрева посуды
