--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -549,11 +549,11 @@
 	}
 	.prod-item__a-slider{
 		width: 100% !important;
-		height: rem(162) !important;
+		// height: rem(162) !important;
 		margin-bottom: rem(23) !important;
 	}
 	.prod-item__a-img{
-		height: auto;
+		// height: auto; 
 	}
 
 	.prod-item__title{
