--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -307,7 +307,7 @@
 
   --item-px: #{rem(16)};
   @include media-breakpoint-up(xl){
-    --item-px: #{rem(24)};
+    // --item-px: #{rem(20)};
   }
 
   padding: rem(24) var(--item-px) rem(30);
@@ -462,10 +462,10 @@
     width: 100%;
     margin: 0 auto;
     height: rem(182);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    line-height: rem(182);
+    vertical-align: middle;
+    text-align: center;
+    display: block; 
 
     img {
       width: auto;
@@ -534,6 +534,11 @@
 
   &__char {
     margin-bottom: 5px;
+    --bs-gutter-x: 10px;
+    span{
+      line-height: 1.2;
+
+    }
     &:last-child{
       margin-bottom: 0;
     }
@@ -603,12 +608,13 @@
   &__key {
     max-width: 50%;
     color: $gray-585;
-    margin-right: rem(3);
+    // margin-right: rem(3);
   }
 
   &__val {
     margin-left: auto;
     max-width: 50%;
+    text-align: right;
   }
 
   &__foot-row {
