add style for typografy

--- a/sourse/pug/blocks/sArtical/_sArtical.pug
+++ b/sourse/pug/blocks/sArtical/_sArtical.pug
@@ -30,6 +30,15 @@ mixin sArtical(data)
 							br
 							//br can be removed
 							| по подбору, уходу, сервису
+						mixin list()
+							ul
+								- for (var x = 0; x < 5; x++)
+									li Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.
+						+b.custom-list--plus
+							+list()
+						+b.custom-list--minus
+							+list()
+						i Полезно знать! В один полный комплект (набор) входят чашка и блюдце для десерта, четыре разных по глубине тарелки (для первого и второго блюд, для хлеба, для салата), две ложки/вилки, стакан и нож.
 						p Ассортимент мотобуров довольно широкий. На рынке представлены инструменты разных производителей. Модели различаются по техническим характеристикам, функциональным возможностям, качеству исполнения, стоимости. Классифицируются их по назначению на бытовые и профессиональные. Первые предназначены для работы на приусадебном участке, в саду, на даче, вторые используют на стройплощадках, при проведении геологических исследований и пр. Как выбрать хороший мотобур? Ответить на этот вопрос непросто. Нужно проанализировать различные параметры, сравнить модели, чтобы подобрать наиболее подходящий под ваши цели инструмент.
 					section
 						h2 Разновидности мотобуров
