--- a/sourse/pug/blocks/sArtical/_sArtical.pug
+++ b/sourse/pug/blocks/sArtical/_sArtical.pug
@@ -34,6 +34,7 @@ mixin sArtical(data)
 							ul
 								- for (var x = 0; x < 5; x++)
 									li Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.
+						+list()
 						+b.custom-list--plus
 							+list()
 						+b.custom-list--minus
