--- a/sourse/pug/blocks/sProdSl/_sProdSl.pug
+++ b/sourse/pug/blocks/sProdSl/_sProdSl.pug
@@ -24,7 +24,7 @@ mixin sProdSl(data)
 						+sProdSlSlider(9)
 						-for(var i = 0; i < 9; i++)
 							+sProdSlSlider(9)
-			.swiper-pagination.d-none.d-md-flex
+			.swiper-pagination--main.swiper-pagination.d-none.d-md-flex
 	// end sProdSl
 
 mixin sProdSlSlider(imgNum, title='Вытяжка настенного монтажа Maunfeld Lee Wall 35 ix')
