--- a/sourse/pug/blocks/sLMap/_sLMap.scss
+++ b/sourse/pug/blocks/sLMap/_sLMap.scss
@@ -6,8 +6,11 @@
 
 		position: relative;
 		z-index: 1;
+		.ymaps-2-1-79-ground-pane {
+				-webkit-filter: grayscale(100%) !important;
+		}
 		& > *{
-			filter: grayscale(100%);
+			// filter: grayscale(100%);
 			width: 100%!important;
 			height: 100%!important;
 			position: absolute!important;
